# pacstall-gui

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
