[package]
name = "pacstall-gui"
version = "0.1.0"
authors = ["wizard-28 <wiz28@protonmail.com>"]
edition = "2021"
description = "A GUI frontend for Pacstall"
homepage = "https://pacstall.dev/"
repository = "https://github.com/pacstall/pacstall-gui/"
license = "GPL-3.0-or-later"
keywords = ["pacstall", "gui", "apt", "ubuntu", "gtk"]
categories = ["gui"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
gtk = "0.15.5"
reqwest = "0.11.11"
tokio = { version = "1.19.2", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
